--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ title : Made Glorious Summer
 tagline: Made Glorious Summer
 author :
   name : David Maddalena
-  email : dpmaddalena via geemail
+  email : dpmaddalena@gmail.com
   github : dpmaddalena
   
 
