--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ pygments: true
 # so be sure to set them if your theme uses them.
 #
 title : Made Glorious Summer
-tagline: Made Glorious Summer
+tagline: art with arms contending
 author :
   name : David Maddalena
   email : dpmaddalena@gmail.com
