--- a/_config.yml
+++ b/_config.yml
@@ -74,6 +74,10 @@ JB :
   tags_path : /tags.html
   atom_path : /atom.xml
   rss_path : /rss.xml
+  
+  # pagination
+  #
+  paginate: 5
 
   # Settings for comments helper
   # Set 'provider' to the comment provider you want to use.
