--- a/_config.yml
+++ b/_config.yml
@@ -77,7 +77,7 @@ JB :
   
   # pagination
   #
-  paginate: 5
+  # paginate: 5
 
   # Settings for comments helper
   # Set 'provider' to the comment provider you want to use.
