--- a/_config.yml
+++ b/_config.yml
@@ -8,8 +8,8 @@ pygments: true
 # Themes are encouraged to use these universal variables 
 # so be sure to set them if your theme uses them.
 #
-title : I M B Y
-tagline: art with arms contending
+title : Art With Arms Contending
+tagline: IMBY
 author :
   name : David Maddalena
   email : dpmaddalena@gmail.com
