change markdown interpreter

--- a/_config.yml
+++ b/_config.yml
@@ -75,6 +75,11 @@ JB :
   atom_path : /atom.xml
   rss_path : /rss.xml
 
+  # markdown tweak
+  
+  markdown: kramdown
+
+  
   # Settings for comments helper
   # Set 'provider' to the comment provider you want to use.
   # Set 'provider' to false to turn commenting off globally.
