--- a/_config.yml
+++ b/_config.yml
@@ -11,8 +11,8 @@ pygments: false
 title : Art With Arms Contending
 tagline: IMBY
 author :
-  name : David Maddalena
-  email : dpmaddalena@gmail.com
+  name : D.P. Maddalena
+  email : dpmaddalena@pm.me
   github : dpmaddalena
   
 
