--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ pygments: false
 # Themes are encouraged to use these universal variables 
 # so be sure to set them if your theme uses them.
 #
-title : Art With Arms Contending
+title : D.P. Maddalena
 tagline: IMBY
 author :
   name : D.P. Maddalena
