--- a/_config.yml
+++ b/_config.yml
@@ -9,8 +9,8 @@ pygments: false
 # so be sure to set them if your theme uses them.
 #
 title : D.P. Maddalena
-tagline: IMBY
-author :
+tagline: art, authering, aha
+author : D.P. Maddalena
   name : D.P. Maddalena
   email : dpmaddalena@pm.me
   github : dpmaddalena
