--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ author : D.P. Maddalena
 # Else if you are pushing to username.github.io, replace with your username.
 # Finally if you are pushing to a GitHub project page, include the project name at the end.
 #
-production_url : http://dpmaddalena.github.io
+production_url : https://www.dpmaddalena.com
 
 # All Jekyll-Bootstrap specific configurations are namespaced into this hash
 #
