--- a/_config.yml
+++ b/_config.yml
@@ -8,11 +8,11 @@ pygments: false
 # Themes are encouraged to use these universal variables 
 # so be sure to set them if your theme uses them.
 #
-title : 
-tagline: 
-author : 
-  name : 
-  email : 
+title : D.P. Maddalena :: Art, Authoring, Aha
+tagline: Art, Authoring, Aha
+author : D.P. Maddalena
+  name : D.P. Maddalena
+  email : dpmaddalena@pm.me
   github : 
   
 
