--- a/_config.yml
+++ b/_config.yml
@@ -8,11 +8,11 @@ pygments: false
 # Themes are encouraged to use these universal variables 
 # so be sure to set them if your theme uses them.
 #
-title : 
+title : DP Maddalena | Art Authoring Aha
 tagline: 
-author : 
+author : DP Maddalena
   name : 
-  email : 
+  email : dpmaddalena@pm.me
   github : 
   
 
