--- a/_config.yml
+++ b/_config.yml
@@ -8,10 +8,10 @@ pygments: false
 # Themes are encouraged to use these universal variables 
 # so be sure to set them if your theme uses them.
 #
-title : DP Maddalena | Art Authoring Aha
-tagline: 
-author : DP Maddalena
-  name : 
+title : "D.P. Maddalena :: Art, Authoring, Aha"
+tagline: "Art, Authoring, Aha"
+author : "D.P. Maddalena"
+  name : "D.P. Maddalena"
   email : dpmaddalena@pm.me
   github : 
   
