--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ pygments: false
 title : DP Maddalena Art, Authoring, Aha
 tagline: Art Authoring Aha
 author : DP Maddalena
-  name : DP Maddalena
+  name : 
   email : dpmaddalena@pm.me
   github : 
   
