--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ pygments: false
 # Themes are encouraged to use these universal variables 
 # so be sure to set them if your theme uses them.
 #
-title : DP Maddalena Art, Authoring, Aha
+title : DP Maddalena Art Authoring Aha
 tagline: Art Authoring Aha
 author : DP Maddalena
   name : 
