--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ pygments: false
 # so be sure to set them if your theme uses them.
 #
 title : D.P. Maddalena
-tagline : Art Authoring Aha
+tagline : Art, Authoring, Aha
 author : D.P. Maddalena
 name : D.P. Maddalena
 email : dpmaddalena@pm.me
