--- a/_config.yml
+++ b/_config.yml
@@ -9,10 +9,10 @@ pygments: false
 # so be sure to set them if your theme uses them.
 #
 title : "D.P. Maddalena: Art, Authoring, Aha"
-tagline : Art, Authoring, Aha
-author : D.P. Maddalena
-name : D.P. Maddalena
-email : dpmaddalena@pm.me
+tagline : "Art, Authoring, Aha"
+author : "D.P. Maddalena"
+name : "D.P. Maddalena"
+email : "dpmaddalena@pm.me"
 github : 
   
 
